--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 90%;
   margin: auto;
   margin-top: 1px;
-  padding: 20px;
+  padding: 10px;
   background: #f3f3f3;
   border-radius: 8px;
   border: 1px solid #ccc;
@@ -20,12 +20,25 @@
   background: green;
 }
 
+.start:disabled {
+  background: gray;
+  cursor: not-allowed;
+}
+
+
+
 .stop {
   background: red;
 }
 
-.reset {
+
+.stop:disabled {
   background: gray;
+  cursor: not-allowed;
+}
+
+.reset {
+  background:orange;
 }
 
 .top-buttons button {
